@@ -77,6 +77,7 @@ namespace Mono.Cecil.Cil {
 		void InsertBefore (Instruction target, Instruction instr);
 		void InsertAfter (Instruction target, Instruction instr);
 		void Append (Instruction instr);
+		void Replace (Instruction old, Instruction instr);
 		void Remove (Instruction instr);
 	}
 }
